# private-coding-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Containerfile.provisioner  Makefile  PCA_ARO.md  README.md  testresults_h100.md
.cursor/rules/: use-makefile.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pre-commit-autofix.yml  pre-commit-ci.yml
PCA_Deployment_ARO/: Dockerfile.opencode  README.md  testresults.md
PCA_Deployment_ARO/argocd/: 00-app-of-apps.yaml
PCA_Deployment_ARO/scripts/: create-gpu-machineset.sh  deploy-full-stack.sh  post-terraform-fullstack.sh  setup-devspaces-users.sh  validate.sh
PCA_Deployment_ARO/terraform/: .gitignore  gitops-bootstrap.tf  main.tf  outputs.tf  terraform.tfstate.1779175780.backup  (+3 more)
PCA_Deployment_ROSA/: README.md  TODO.md
assets/: GPU_Sizing_Considerations_for_AI_Code_Assistant_v2.html  GPU_Sizing_Considerations_for_AI_Code_Assistant_v2.md  GPU_Sizing_Considerations_for_AI_Code_Assistant_v2_print.html  GPU_Sizing_Considerations_for_AI_Code_Assistant_v3.md  build-opencode-image.sh  devfile.yaml  gpu-sizing-calculator.canvas.tsx  gpu-sizing-considerations-v2.canvas.tsx
deploy_existing_openshift/: README.md  values-ai-serving.yaml  values-devspaces.yaml  values-guardrails.yaml  values-platform-config.yaml
tests/cluster-smoke/: .gitignore  Makefile  README.md  conftest.py  pyproject.toml  test_ai_gateway.py  test_devspaces.py  test_grafana.py  test_guardrails.py  test_langfuse.py  test_otel.py  test_readiness.py  test_vllm.py
tests/cluster-smoke/pca_smoke/: __init__.py  oc.py  urls.py
(+219 files in other folders)
