[project]
name = "pca-cluster-smoke"
version = "0.1.0"
description = "Developer-only smoke tests against a provisioned PCA OpenShift cluster"
requires-python = ">=3.11"
dependencies = [
  "pytest>=8.0",
  "pytest-xdist>=3.5",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = []

[tool.pytest.ini_options]
markers = [
  "readiness: cluster object readiness checks",
  "vllm: llm-d / vLLM gateway API checks",
  "grafana: Grafana health and datasources",
  "langfuse: Langfuse (skipped if not deployed)",
  "otel: OTel Collector (skipped if Langfuse off)",
  "devspaces: DevSpaces config + harness request",
  "guardrails: Guardrails proxy (skipped if not deployed)",
]
testpaths = ["."]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pca_smoke*"]
